Made Few Updates

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -17,7 +17,7 @@
 
   
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.jpg" />
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <title>@its_shyam640 | Portfolio</title>
 
   <style>
