--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,21 +3,21 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/logo.jpg" />
+  <link rel="icon" href="public/logo.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Welcome to My Portfolio and Blog Website. I share my experiences, projects, and thoughts on various topics related to technology, programming, and more.">
   <meta name="keywords" content="portfolio, blog, technology, programming, projects, web development">
   <meta name="author" content="@its_shyam640">
 
   <meta property="og:title" content="Portfolio and Blog" />
-  <meta property="og:image" content="%PUBLIC_URL%logo.jpg" />
+  <meta property="og:image" content="public/logo.jpg" />
   <meta property="og:url" content="" />
   <meta property="og:site_name" content="Portfolio and Blog" />
   <meta property="og:description" content="Welcome to My Portfolio and Blog Website. I share my experiences, projects, and thoughts on various topics related to technology, programming, and more.">
 
   
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.jpg" />
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+  <link rel="apple-touch-icon" href="public/logo.jpg" />
+  <link rel="manifest" href="public/manifest.json">
   <title>@its_shyam640 | Portfolio</title>
 
   <style>
